# Ember

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: cmake-build.yml
Ember/: CMakeLists.txt
Ember/include/ember/: core.h  version.h
Ember/include/ember/core/: allocators.h  darray.h  datastream.h  format.h  hashmap.h  logger.h  memory.h  result.h  string_utils.h
Ember/include/ember/gpu/: device.h  extension.h  frame.h  frame_internal.h  resources.h  types.h
Ember/include/ember/gpu/ext/: wayland_surface.h
Ember/include/ember/platform/: global.h  internal.h  platform_linux.h  system.h  threading.h  window.h
Ember/include/ember/platform/internal/: wayland.h
Ember/include/ember/window/: desktop.h  input.h  window.h
Ember/include/ember/window/internal/: wayland.h
Ember/src/: defines.h
Ember/src/core/: allocators.c  darray.c  datastream.c  hashmap.c  logger.c  memory.c  result.c  string_utils.c
Ember/src/ember/core/: allocators.c  allocators.h  logger.c  logger.h  math_types.h  memory.c  memory.h  string_utils.c  string_utils.h
Ember/src/ember/gpu/: commandbuf.c  commandbuf.h  device.c  device.h  resources.c  resources.h  types.h
Ember/src/ember/gpu/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_image.c  vulkan_image.h  vulkan_renderbuffer.c  vulkan_renderbuffer.h  vulkan_renderstage.c  vulkan_renderstage.h  vulkan_rendertarget.c  vulkan_rendertarget.h  vulkan_texture.c  vulkan_texture.h  vulkan_types.h  vulkan_utils.c  vulkan_window_system.c  vulkan_window_system.h
Ember/src/ember/gpu/vulkan/platform/: vulkan_platform.h  vulkan_platform_linux.c
Ember/src/ember/platform/: global.h  threading.h  window.h
Ember/src/ember/platform/internal/: internal.h  platform_linux.c  platform_linux.h  platform_posix.c
Ember/src/gpu/: device.c  frame.c  frame_internal.h  resources.c
Ember/src/gpu/ext/: vulkan_wayland_surface.c  wayland_surface.c
Ember/src/gpu/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_frame.c  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_rendertarget.c  vulkan_rendertarget.h  vulkan_surface.c  vulkan_surface.h  vulkan_texture.c  vulkan_texture.h  vulkan_types.h  vulkan_utils.c
Ember/src/gpu/vulkan/platform/: vulkan_platform.h  vulkan_platform_linux.c  vulkan_platform_wayland.c
Ember/src/platform/: platform_linux.c  platform_posix.c  platform_wayland.c
Ember/src/window/: global.c  platform_wayland.c
engine/src/: defines.h
engine/src/core/: logger.h  memory.c  memory.h
engine/src/platform/: platform.h  platform_glfw.c
engine/src/renderer/: render_cmd.c  render_objects.c  render_objects.h  renderer_backend.c  renderer_backend.h  renderer_types.h
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_renderbuffer.c  vulkan_renderbuffer.h  vulkan_renderstage.c  vulkan_renderstage.h  vulkan_rendertarget.c  vulkan_rendertarget.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_texture.c  vulkan_texture.h  vulkan_types.h  vulkan_utils.c  vulkan_window_system.c  vulkan_window_system.h
engine/src/utils/: darray.c  darray.h
examples/: CMakeLists.txt  basic_window.c  clear_colour.c  clear_screen.c  emgpu_surface.c  emwin_window.c  hello_window.c
include/ember/: core.h
include/ember/core/: darray.h  format.h  logger.h  math_types.h  memory.h
include/ember/gpu/: device.h  format.h  frame.h  frame_internal.h  resources.h  types.h
include/ember/gpu/ext/: emwin_surface.h  wayland_surface.h  win32_surface.h
include/ember/platform/: filesystem.h  internal.h  system.h  time.h
include/ember/platform/internal/: posix.h
include/ember/window/: desktop.h  embergpu_surface.h  input.h  input_codes.h  internal.h  window.h
include/ember/window/internal/: wayland.h
include/ember/window/internal/wayland-protocols/: wayland-protocol.c  xdg-shell-client.h
include/ember/window/wayland-protocols/: wayland-client.h
protocol/ember/: core.h  version.h
protocol/ember/core/: datastream.h  format.h  logger.h  math_types.h  memory.h  result.h  version_types.h
protocol/ember/gpu/: compute.h  device.h  format.h  frame.h  frame_internal.h  raster.h  resources.h  surface.h  types.h
protocol/ember/gpu/ext/: emwin_surface.h  wayland_surface.h  win32_surface.h
protocol/ember/platform/: filesystem.h  ipc.h  system.h  threading.h  time.h  timer.h
protocol/ember/platform/internal/: posix.h
protocol/ember/window/: desktop.h  dialog.h  input.h  window.h
sandbox/: CMakeLists.txt
sandbox/src/: main.c
shared/: CMakeLists.txt  device.c  extension.c  frame.c  logger.c  memory.c  result.c  window.c
src/: CMakeLists.txt
src/core/: darray.c  datastream.c  logger.c  memory.c
src/gpu/: device.c  extension.c  frame.c  resources.c
src/gpu/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_extensions.h  vulkan_frame.c  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_surface.c  vulkan_surface.h  vulkan_texture.c  vulkan_texture.h  vulkan_types.h  vulkan_utils.c
src/platform/: platform_posix.c
src/window/: global.c  platform_wayland.c  wayland_desktop.c  wayland_embergpu.c  wayland_types.h  wayland_win.c
